# fractal-service

./: .gitignore  CMakeLists.txt  README.md  colorutil.js  endpoints.txt  fractalGenerator.js  index.js  mathutils.js  package.json
src/: FractalGenerator.cpp  FractalGenerator.h  fractal_service_native.cpp  math_utils.cpp  math_utils.h
